--- a/glfw-experiment.csproj
+++ b/glfw-experiment.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="glfw-net" Version="3.3.1" />
+    <PackageReference Include="MoonSharp" Version="2.0.0.0" />
   </ItemGroup>
 
 </Project>
