--- a/glfw-experiment.csproj
+++ b/glfw-experiment.csproj
@@ -1,14 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk" >
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>net472</TargetFramework>
     <RootNamespace>glfw_experiment</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="glfw-net" Version="3.3.1" />
     <PackageReference Include="MoonSharp" Version="2.0.0.0" />
+    <PackageReference Include="OpenGL.NET" Version="1.0.304" />
   </ItemGroup>
 
 </Project>
