--- a/project.csproj
+++ b/project.csproj
@@ -3,13 +3,14 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net472</TargetFramework>
-    <RootNamespace>glfw_experiment</RootNamespace>
+    <RootNamespace>Game</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="glfw-net" Version="3.3.1" />
     <PackageReference Include="MoonSharp" Version="2.0.0.0" />
     <PackageReference Include="OpenGL.NET" Version="1.0.304" />
+    <PackageReference Include="VulkanSharp" Version="0.1.10" />
   </ItemGroup>
 
 </Project>
